[workspace]

members = [
    "aggregator",
    "bin/node",
    "bin/runtime",
    "finality-aleph",
    "pallets/aleph",
    "pallets/elections",
    "pallets/support",
    "primitives",
]

exclude = [
  "flooder",
  "e2e-tests",
  "aleph-client",
  "fork-off",
  "benches/payout-stakers",
  "bin/cliain",
  "contracts/access_control",
  "contracts/button",
  "contracts/game_token",
  "contracts/marketplace",
  "contracts/simple_dex",
  "contracts/ticket_token",
  "contracts/wrapped_azero"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
