[workspace]

members = [
    "aggregator",
    "bin/node",
    "bin/runtime",
    "finality-aleph",
    "pallets/aleph",
    "pallets/elections",
    "pallets/support",
    "pallets/snarcos",
    "primitives",
]

exclude = [
    "flooder",
    "e2e-tests",
    "aleph-client",
    "fork-off",
    "benches/payout-stakers",
    "bin/cliain",
    "bin/runtime/src/chain_extension/snarcos-extension",
    "contracts/public_token",
    "contracts/shielder",
    "contracts/snarcos-contract",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
