[package]
name = "aggregator"
version = "0.5.1"
license = "Apache 2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
aleph-bft-rmc = { version = "0.6" }
aleph-bft-types = { version = "0.8" }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [ "sync", "macros", "time", "rt-multi-thread" ] }
