[package]
name = "aleph_client"
version = "0.4.0"
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git"
tag = "polkadot-v0.9.18.b26ad4db"
features = ["staking-xt"]

[dependencies]
# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
pallet-staking = {git = "https://github.com/paritytech/substrate.git",branch = "polkadot-v0.9.18", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
pallet-aleph = { path = "../pallets/aleph", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
primitives = { path = "../primitives", default-features = false }

# other dependencies
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4"
serde_json = { version = "1.0" }
anyhow = "1.0"
codec = { package = 'parity-scale-codec', version = "3.0.0", default-features = false,  features = ['derive']}

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "pallet-staking/std",
    "pallet-treasury/std",
    "pallet-aleph/std",
    "primitives/std",
    "pallet-balances/std",
]
