[package]
name = "baby-liminal-extension"
version = "0.1.0"
authors = ["Cardinal"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/aleph-zero-foundation/aleph-node"
license = "Apache-2.0"

[dependencies]
ink = { version = "=4.3.0", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

pallet-baby-liminal = { path = "../pallets/baby-liminal", default-features = false, optional = true }

[dev-dependencies]
aleph-runtime = { path = "../bin/runtime" , features = ["liminal"] }

[features]
runtime = [
    "pallet-baby-liminal"
]
runtime-std = [
    "std",
    "runtime",
    "pallet-baby-liminal/std",
]

ink = [
    "dep:ink",
    "scale",
]
ink-std = [
    "std",
    "ink",
    "ink/std",
    "scale/std",
    "scale-info/std",
]

std = []
