[package]
name = "baby-liminal-extension"
version = "0.1.0"
authors = ["Cardinal"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/aleph-zero-foundation/aleph-node"
license = "Apache-2.0"

[dependencies]
# Frontend dependencies:

ink = { version = "4.3.0", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Backend dependencies:

log = { version = "0.4", default-features = false, optional = true }

frame-support = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }
pallet-contracts = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }
sp-std = { git = "https://github.com/Cardinal-Cryptography/polkadot-sdk.git", branch = "aleph-v1.2.0", default-features = false, optional = true }

[features]
# This is an artificial feature that is used by 3rd party crates in macro expansions.
std = []

# `runtime` and `runtime-std` features are dedicated to the runtime crate. They bring the backend part of the extension.
runtime = [
    "pallet-contracts",
    "frame-support",
    "log",
]
runtime-std = [
    "runtime",
    "std",
    "pallet-contracts/std",
    "frame-support/std",
]

# `ink` and `ink-std` features are dedicated to the ink! part of the extension. They bring the smart contract part of
# the extension.
ink = [
    "dep:ink",
    "scale",
]
ink-std = [
    "ink",
    "std",
    "ink/std",
    "scale/std",
    "scale-info/std",
]
