[package]
name = "common"
version = "0.1.0"
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/Cardinal-Cryptography/substrate-api-client.git"
tag = "fixed_dependencies"

[dependencies]
# Substrate dependencies
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
sp-io = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master"}

# other dependencies
hex = "0.4.3"
log = "0.4"
mio = { version = "0.6.14" }
serde_json = { version = "1.0" }
ws = { version = "0.9.1", features = ["ssl"] }
