[package]
name = "finality-aleph"
version = "0.3.0"
authors = ["Cardinal Cryptography"]
edition = "2018"

[dependencies]
aleph-primitives = { package = "primitives", path = "../primitives" }
tokio = { version = "1.15.0", features = [ "sync", "macros", "time", "rt-multi-thread" ] }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
hash-db = { version = "0.15.2", default-features = false }
log = "0.4"
lru = "0.6"
rand = "0.8"
futures = "0.3"
futures-timer = "3.0"
parking_lot = "0.11"
parity-util-mem = "0.10"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
aleph-bft = "0.8.4"
serde = "1.0"
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sc-utils = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
derive_more = "0.99.7"
env_logger = "0.8.3"
async-trait = "0.1.42"
ip_network = "0.4"

[dev-dependencies]
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
substrate-test-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16"}
