[package]
name = "finality-aleph"
version = "0.4.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
aleph-bft = "0.13.0"
aleph-bft-rmc = "0.3.0"
aleph-primitives = { package = "primitives", path = "../primitives" }

async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
derive_more = "0.99"
env_logger = "0.9"
futures = "0.3"
futures-timer = "3.0"
hash-db = { version = "0.15.2", default-features = false }
ip_network = "0.4"
log = "0.4"
lru = "0.7"
parity-util-mem = "0.11"
parking_lot = "0.12"
rand = "0.8"
serde = "1.0"
tokio = { version = "1.17", features = [ "sync", "macros", "time", "rt-multi-thread" ] }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-keystore = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-network = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-telemetry = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-service = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-application-crypto = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-core = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-runtime = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-state-machine = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-trie = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-utils = {  git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-api = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-blockchain = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-consensus = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-consensus = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-client-api = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sp-io = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }

[dev-dependencies]
substrate-test-runtime-client = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
substrate-test-runtime = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
sc-block-builder = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
