[package]
name = "fork-off"
version = "1.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
codec = { package = 'parity-scale-codec', version = "3.0.0", default-features = false, features = ['derive'] }
env_logger = "0.8"
futures = "0.3.17"
hex = "0.4.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12.0"

frame-support = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
frame-system = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
pallet-balances = { git = "https://github.com/timorl/substrate.git", branch = "A0-558-walukr" }
