[package]
name = "pallet-aleph"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = "3.0.0"
frame-system = "3.0.0"
sp-std = "3.0.0"
serde = "1.0"
primitives = { path = "../primitives", default-features = false}
pallet-session = "3.0.0"

[dev-dependencies]

pallet-balances = "3.0.0"
pallet-timestamp = "3.0.0"
sp-runtime = "3.0.0"
sp-core = "3.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "primitives/std",
    "pallet-session/std"
]
