[package]
name = "peer-signer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signer"
path = "src/signer.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[dependencies]
hex = "0.4"
libp2p = "0.40"
clap = {version = "3.0", features = ["derive"]}
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
tokio = { version = "1.0", features = ["full"]}
