[package]
name = "poseidon-permutation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poseidon-permutation = { git = "https://github.com/penumbra-zone/poseidon377" }

[patch."https://github.com/penumbra-zone/poseidon377"]
poseidon-paramgen = { path = "../paramgen" }