[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
authors = ["Cardinal Cryptography"]
description = "An instantiation of the Poseidon SNARK-friendly hash function."

[dependencies]
ark-bls12-381 = { version = "^0.3.0" }
ark-ff = "0.3"
ark-r1cs-std = {version = "0.3" }
ark-relations = { version = "0.3" }
ark-sponge = { git = "https://github.com/penumbra-zone/sponge", branch = "r1cs" }
once_cell = "1.8"
poseidon-paramgen = { version = "0.1" }
poseidon-permutation = { git = "https://github.com/penumbra-zone/poseidon377" }

[build-dependencies]
ark-bls12-381 = { version = "^0.3.0" }
ark-ff = "0.3"
poseidon-paramgen = { version = "0.1" }
